# 4761-project

./: .gitignore  README.md  pyproject.toml  requirements-notebooks.txt  requirements.txt
data/: merfish_download.py
docs/: mrf-quickstart.md  project-proposal.md  spatial-mrf-method.md
notebooks/: Eval_whole_section.ipynb  MERFISH.ipynb  aw_hmrf.ipynb  aw_hmrf_data.ipynb  aw_hmrf_data_copy.ipynb  aw_hmrf_toy.ipynb  embedding.ipynb  exploreAllen.ipynb  hippocampus_eval.ipynb
scripts/: check_dependencies.py  demo_spatial_mrf.py  run_aw_hmrf_once.py
src/spatial_mrf/: __init__.py  evaluation.py  metrics.py  model.py  model_HMRF.py  utils.py
